<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eventTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/eventTitle"
        android:text="description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventDescription"
        android:layout_alignStart="@+id/eventDescription"
        android:layout_below="@+id/eventDescription"
        android:layout_marginTop="5dp"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventLocationLabel"
        android:layout_alignStart="@+id/eventLocationLabel"
        android:layout_below="@+id/eventLocationLabel"
        android:layout_marginTop="3dp"
        android:text="@string/from"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventFromLabel"
        android:layout_alignStart="@+id/eventFromLabel"
        android:layout_below="@+id/eventFromLabel"
        android:layout_marginTop="3dp"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/eventLocationLabel"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/eventLocationLabel"
        android:layout_toRightOf="@+id/eventLocationLabel"
        android:text="Škola"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventLocation"
        android:layout_alignStart="@+id/eventLocation"
        android:layout_alignTop="@+id/eventFromLabel"
        android:text="1.9.2009"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventFrom"
        android:layout_alignStart="@+id/eventFrom"
        android:layout_alignTop="@+id/eventToLabel"
        android:text="3.9.2009"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventAdditionalInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventToLabel"
        android:layout_alignStart="@+id/eventToLabel"
        android:layout_below="@+id/eventToLabel"
        android:layout_marginTop="3dp"
        android:text="@string/additional_info"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventAdditionalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/eventAdditionalInfoLabel"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/eventAdditionalInfoLabel"
        android:layout_toRightOf="@+id/eventAdditionalInfoLabel"
        android:text="žádné"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>